--- a/gen.html
+++ b/gen.html
@@ -12,7 +12,7 @@
     <input type="color" id="color1" name="color1" value="#008000">
     <input type="color" class="color2" name="color2" value="#00ffff">
     <input type="color" class="color3" name="color2" value="#808080">
-    <h2>CSS Current Background</h2>
+    <h2>Current Background color</h2>
     <h3></h3>
 </body>
     <script lang="javascript" type="text/javascript" src="./script/gen.js"></script>
