--- a/gen.html
+++ b/gen.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./css/gen.css">
 </head>
 <body id="gradient">
-    <h1>Creating of a background generator</h1>
+    <h1>background generator</h1>
     <input type="color" id="color1" name="color1" value="#008000">
     <input type="color" class="color2" name="color2" value="#00ffff">
     <input type="color" class="color3" name="color2" value="#808080">
